# backend-gauntlet

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  infra.py  pyproject.toml  rust-toolchain.toml  rustfmt.toml  status.py
projects/01-url-shortener/: .env.example  CONCEPTS.md  Cargo.toml  Makefile  SPEC.md  docker-compose.yml  makefile.py
projects/01-url-shortener/.sqlx/: query-4607bd090c329f47b6cd1cfc65068f326f3f307722f56ae2d6506bc1233f78d0.json  query-5f81a60dd6238a850f74a2a4cbda132e17e9b119ac178ef2bd051418c8662442.json  query-7d9187a174141d7b16326dffb84ff74bb93b144aec44b68cf5125e7e2b9a88cb.json  query-9181e6e70a80c78972f2805f5b79c11db61b97c4cde133ae9b3a8768456bac14.json
projects/01-url-shortener/bench/: README.md  _lib.js  redirect.js  run.js  seed.js  smoke.js
projects/01-url-shortener/benches/: id_gen.rs
projects/01-url-shortener/dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
projects/01-url-shortener/docs/: 00-how-url-shorteners-work.md  01-design.md
projects/01-url-shortener/migrations/: 0001_init.sql
projects/01-url-shortener/observability/: prometheus.yml
projects/01-url-shortener/src/: auth.rs  cache.rs  error.rs  id_gen.rs  ingest.rs  main.rs  metrics.rs  ratelimit.rs  resolve.rs  routes.rs  shutdown.rs  test_support.rs  url_validate.rs
projects/02-rate-limiter/: .env.example  CONCEPTS.md  Cargo.toml  Makefile  SPEC.md  build.rs  docker-compose.yml  makefile.py
projects/02-rate-limiter/docs/: 00-token-bucket.md  01-sliding-window-boundary-burst.md  02-redis-lua-atomic-decisions.md  03-hot-path-grpc-fundamentals.md
projects/02-rate-limiter/proto/: ratelimit.proto
projects/02-rate-limiter/src/: error.rs  limiter.rs  main.rs  redis_limiter.rs  sliding_window.rs  token_bucket.rs
projects/03-realtime-pubsub/: .env.example  CONCEPTS.md  Cargo.toml  Makefile  RESEARCH.md  SPEC.md  docker-compose.yml  makefile.py
projects/03-realtime-pubsub/.sqlx/: query-051ca4e79d99272bb4921953d70671481a7b888e3e7edb256276efb9cd2295c9.json  query-138fbe3b3c2e51ebf46e774b1ef7c10430ca507c60d7676bccf515700bad0d6f.json  query-5e86bc5837a7121a989ec23193d0ef63deae26e733aa6d1d1c2a536092ae9c66.json  query-6e5c6c2edf6ac48813d858f924ed483e01eca422be9852c6526789df70bea146.json  query-9a07e5e565eeda47fec0490b27ee98bbfce7374291a285d786fdd65539615bf2.json  query-bc85f1c6911c395f4a00033f06bcd8d9b1d0389ce22aab29c33826072ab79886.json  query-cb8617b6683c0e681cb67101e31c4f2096497afe5fea1aa21bf93b14d63f2abb.json  query-e95f4eb844e11c1ced27448b9e0c5e30f487cd9a42003d6105825dd724346cde.json  query-f1f26e56795eacc7897e17990a2b72b38564e3586899410d2818476887c2fe01.json
projects/03-realtime-pubsub/docs/: 00-the-fan-out-hub-and-lock-discipline.md  01-backpressure-and-the-slow-consumer.md  02-presence-as-soft-state.md  03-multi-node-fan-out-and-the-echo-loop.md  04-websocket-fundamentals.md
projects/03-realtime-pubsub/migrations/: 0001_directory.sql
projects/03-realtime-pubsub/observability/: README.md  prometheus.yml
projects/03-realtime-pubsub/src/: backpressure.rs  cluster.rs  directory.rs  error.rs  hub.rs  main.rs  metrics.rs  presence.rs  protocol.rs  routes.rs
projects/03-realtime-pubsub/web/: README.md  index.html  package.json  vite.config.ts
projects/04-job-queue/: .env.example  CONCEPTS.md  Cargo.toml  Dockerfile  Makefile  RESEARCH.md  SPEC.md  docker-compose.yml  makefile.py
projects/04-job-queue/.sqlx/: query-0037f98bb67c43e5a2052731512154aa7dc598576c92b48b0339fc30ae3e2d6b.json  query-09c48a25e660b7106cd5085f7af26a51c7e7be1af6d882a7a38bf4579a31de13.json  query-2e5d9274d7c4cf715dd7bfea18d50213c3b16896140c4e0bc2e114ffd712d029.json  query-2f958f8fd059884d2a1b04311e127820415599e1f0903b212a5b426e2916de0e.json  query-358b9856b15611279d630259474fd231aac5f0e566a5d135816ce638ec59464f.json  query-3e0bac061eb0d657a80c2f9096bc3d007b733b8c1168db23d5e280b11eee7d87.json  query-437405d8a68bb4bfc8b0a571eb51d97a0837aeac028c04032d9034320c689c27.json  query-49b70b533cfed49ee27fc8364893404c9dc1937c740126ec0948e27e62a9a9db.json  query-4e29c4ff7390f7ecb64153e72a4d387f71ec1d865b9165f1190445c7bce0dabf.json  query-55edef79b39616bd0ea6e93f5c70feaa2b4042b21d76df4603ff66bf48545337.json  (+11 more)
projects/04-job-queue/docs/: 04-benchmarks.md  (+7 more)
projects/05-metrics-pipeline/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md  docker-compose.yml
projects/06-object-store/: .env.example  .gitignore  CONCEPTS.md  Cargo.toml  Dockerfile  Makefile  README.md  RESEARCH.md  SPEC.md  docker-compose.yml  makefile.py
projects/07-distributed-cache/: .env.example  CONCEPTS.md  Cargo.toml  Dockerfile  SPEC.md  docker-compose.yml
projects/08-message-broker/: .env.example  CONCEPTS.md  Cargo.toml  RESEARCH.md  SPEC.md
projects/09-raft-kv/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md
projects/10-api-gateway/: .env.example  CONCEPTS.md  Cargo.toml  Dockerfile  SPEC.md  docker-compose.yml  gateway.example.json
projects/11-vod-streaming/: .env.example  CONCEPTS.md  Cargo.toml  RESEARCH.md  SPEC.md
projects/12-transcode-pipeline/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md  docker-compose.yml
projects/13-live-ingest/: .env.example  CONCEPTS.md  Cargo.toml  Makefile  SPEC.md  makefile.py
projects/14-media-transport/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md
projects/15-webrtc-sfu/: .env.example  CONCEPTS.md  Cargo.toml  RESEARCH.md  SPEC.md
projects/16-live-platform/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md  docker-compose.yml
projects/17-global-conferencing/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md
projects/18-ledger-payments-core/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md  docker-compose.yml
projects/19-bittorrent/: .env.example  .gitignore  CONCEPTS.md  Cargo.toml  SPEC.md  docker-compose.yml
projects/20-full-text-search/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md
projects/21-workflow-engine/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md  build.rs  docker-compose.yml
projects/22-lsm-redis/: .env.example  CONCEPTS.md  Cargo.toml  SPEC.md  docker-compose.yml
(+500 files in other folders)
