[workspace]
resolver = "2"
members = [
    "crates/common-telemetry",
    "crates/common-config",
    "projects/01-url-shortener",
]

# Shared dependency versions live here so every project pins the same line.
# In a member crate you write e.g. `tokio = { workspace = true }`.
[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Utkarsh Priyadarshi"]

[workspace.dependencies]
# --- async runtime + web ---
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"

# --- data ---
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# --- serde / errors / time ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# --- config ---
dotenvy = "0.15"

# --- internal shared crates ---
common-telemetry = { path = "crates/common-telemetry" }
common-config = { path = "crates/common-config" }

# Optimize dependencies even in dev so local load tests are meaningful.
[profile.dev.package."*"]
opt-level = 2
