[package]
name = "url-shortener"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
rust-embed.workspace = true

sqlx.workspace = true
redis.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true

tracing.workspace = true
url.workspace = true

metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "id_gen"
harness = false
