[package]
name = "rate-limiter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true

redis.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
proptest.workspace = true
