[package]
name = "realtime-pubsub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
# `ws` pulls in axum's WebSocket upgrade extractor. Features are additive, so
# requesting it here is safe even if a future axum default already includes it.
axum = { workspace = true, features = ["ws"] }
tower-http.workspace = true
futures-util.workspace = true
parking_lot.workspace = true

# The cross-node bus (V4) rides on Redis pub/sub.
redis.workspace = true

# The directory (admin-panel roster) persists people/groups/memberships in
# Postgres. Playground scaffolding — NOT part of the store-free pub/sub core
# (V1–V4); gated behind an optional DATABASE_URL. See src/directory.rs.
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true

serde.workspace = true
serde_json.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true

metrics.workspace = true
metrics-exporter-prometheus.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[dev-dependencies]
proptest.workspace = true
