[package]
name = "job-queue"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

# Postgres is both the durable store and the queue broker (claim via SKIP LOCKED).
sqlx.workspace = true

serde.workspace = true
serde_json.workspace = true
# Job timestamps (run_at / locked_until) map to TIMESTAMPTZ via chrono.
chrono.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[dev-dependencies]
# For property-testing the V3 backoff curve (monotonic, capped, jittered).
proptest.workspace = true
