[package]
name = "metrics-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
# SSE fan-out + the consumer message stream are driven with Stream combinators.
futures-util.workspace = true
# Bridges a `tokio::sync::broadcast` receiver into a `Stream` for the SSE feed.
tokio-stream.workspace = true

# Broker: NATS JetStream — the durable log between ingest and the consumer.
# Pure Rust (no C toolchain), so the workspace builds cleanly; the at-least-once
# semantics map straight onto Kafka. See SPEC's "Why NATS, not Kafka?".
async-nats.workspace = true
# Store: ClickHouse — the column store the rollups land in and are queried from.
clickhouse.workspace = true

serde.workspace = true
serde_json.workspace = true
# Metric timestamps + window math map to chrono's UTC types.
chrono.workspace = true
# Zero-copy line-protocol bodies (axum hands us `Bytes`; we publish them as-is).
bytes.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[dev-dependencies]
# For property-testing the V1 parser and the V2 sketch/aggregation invariants.
proptest.workspace = true
# For the throughput/accuracy benches the Definition of Done asks for.
criterion.workspace = true
