[package]
name = "object-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true
# Object metadata carries a Last-Modified timestamp (TIMESTAMPTZ-style).
chrono.workspace = true

# Streaming bodies (V2): pull the request body chunk by chunk and feed a temp
# file + hashers without ever buffering the whole object. `tokio-util`'s
# ReaderStream turns a blob file back into a response Body for GET.
futures-util.workspace = true
bytes.workspace = true
tokio-util.workspace = true

# Content addressing (V1) names blobs by SHA-256; the S3 ETag (V2/V4) is MD5.
# `hex` encodes the digests for both the on-disk name and the ETag.
sha2.workspace = true
md-5.workspace = true
hex.workspace = true

uuid.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true

# Observability (SPEC): Prometheus counters/gauges/histograms via the `metrics`
# facade (call sites just name a metric); the exporter installs the process-
# global recorder and renders `/metrics` for a scrape.
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
# Property-test the multipart ETag formula (V4) and prefix/delimiter listing (V3).
proptest.workspace = true
# Store tests run against an isolated on-disk root, wiped when the test ends.
tempfile.workspace = true
# HTTP integration tests (tests/http_api.rs) drive the real router in-process:
# `tower`'s `ServiceExt::oneshot` feeds one Request through, `http-body-util`'s
# `BodyExt::collect` drains the streamed response body back into bytes.
tower.workspace = true
http-body-util.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
bytes.workspace = true
futures-util.workspace = true
