[package]
name = "raft-kv"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

# Node-to-node RPC transport (RequestVote / AppendEntries / InstallSnapshot).
# The transport is plumbing and fully wired; the consensus it carries is the work.
reqwest.workspace = true

# The randomized election timeout (V1) — different per follower, which is what
# breaks split votes. Declared here so it's ready; the wired timeout helper uses it.
rand.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[dev-dependencies]
# Property-test the invariants that make Raft safe: log matching (V2), and that a
# committed entry is never overwritten (State Machine Safety).
proptest.workspace = true
