[package]
name = "transcode-pipeline"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common-telemetry.workspace = true
common-config.workspace = true

tokio.workspace = true
axum.workspace = true
# CORS (a dashboard/uploader fetches cross-origin) + request tracing.
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

# Postgres is the coordinator's durable memory: the job DAG (tasks + their
# dependency edges + status/leases) lives in rows, so a crashed worker's task
# becomes claimable again and the pipeline survives a restart. Same `sqlx` setup
# as project 04 — the claim (FOR UPDATE SKIP LOCKED) is reused plumbing there;
# here the *DAG readiness* on top of it is the learning (V2).
sqlx.workspace = true
# Job/task ids are opaque UUIDs (no coordinated sequence across workers/nodes).
uuid.workspace = true
# created_at / lease_until timestamps.
chrono.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[dev-dependencies]
# Property-test the chunk planner (V1): boundaries always land on keyframes,
# chunks are gapless and cover the whole asset, and the plan never panics on
# adversarial keyframe spacing.
proptest.workspace = true
